almost all contrast errors fixed
filtering section in geo reference map still has contrast errors

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -13,7 +13,7 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #688F88;
+  background-color: #5A7C77;
 }
 
 ul.topnav li.logo {
@@ -40,7 +40,7 @@ ul.topnav li a {
 
 ul.topnav li a:hover:not(.active),
 ul.topnav li a:focus:not(.active) {
-  background-color: #f3989d;
+  background-color: #4D6A67;
 }
 
 ul.topnav li a.active {
@@ -52,7 +52,6 @@ ul.topnav li.right {
 }
 
 @media screen and (max-width: 600px) {
-
   ul.topnav li.right,
   ul.topnav li {
     float: none;
@@ -70,14 +69,14 @@ li a .dropbtn {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #688f8885;
+  background-color: #5A7C77;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
 
 .dropdown-content a {
-  color: #9494b8;
+  color: #5A7C77;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
