--- a/src/styles/oldstyles.css
+++ b/src/styles/oldstyles.css
@@ -21,7 +21,7 @@ a:focus {
 
 body {
     background-color: #f5f5f5;
-    font-size: 18px;
+    font-size: 1em;
     color: #353135;
     font-family: 'Merriweather', serif, Arial, Helvetica, sans-serif;
     justify-content: center;
@@ -213,14 +213,14 @@ img {
 }
 
 .button-1 {
-    background-color: #94b3ae;
+    background-color: #5A7C77;
     border-radius: 8px;
     border-style: none;
     box-sizing: border-box;
     color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: 1em;
     font-weight: 500;
     height: 40px;
     line-height: 20px;
@@ -240,7 +240,7 @@ img {
 
 .button-1:hover,
 .button-1:focus {
-    background-color: #b0b7b6;
+    background-color: #4D6A67;
 }
 
 body {
